@@ -63,266 +63,245 @@ tasks.register<JavaExec>("runMain") {
     description = "Run MainKt"
     mainClass.set("MainKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx2g")
+    jvmArgs = listOf("-Xmx2g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
 tasks.register<JavaExec>("runBpe") {
     description = "Run BpePrep (BPE 학습 + 인코딩)"
     mainClass.set("data.BpePrepKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx12g")
+    jvmArgs = listOf("-Xmx12g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
 tasks.register<JavaExec>("runAlphabetPrep") {
     description = "Run AlphabetPrep (알파벳 데이터 준비)"
     mainClass.set("data.AlphabetPrepKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx2g")
+    jvmArgs = listOf("-Xmx2g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
 tasks.register<JavaExec>("runBPETest") {
     description = "Run BPETest (BPE 테스트)"
     mainClass.set("BPETestKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx2g")
+    jvmArgs = listOf("-Xmx2g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
 tasks.register<JavaExec>("runTrainer") {
     description = "Run TrainerMain (학습 smoke)"
     mainClass.set("train.TrainerMainKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx8g")
+    jvmArgs = listOf("-Xmx8g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
 tasks.register<JavaExec>("runMiniTrainer") {
     description = "Run MiniTrainerMain (경량 학습 - az 알파벳)"
     mainClass.set("train.MiniTrainerMainKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx2g")
+    jvmArgs = listOf("-Xmx2g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
 tasks.register<JavaExec>("runTinyHelenTrain") {
     description = "Run TinyHelenTrain (TinyHelen leaner 코퍼스 overnight 학습 — 스칼라 백엔드)"
     mainClass.set("train.experiments.TinyHelenTrainKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx8g")
+    jvmArgs = listOf("-Xmx8g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runTinyHelenTrainVec") {
-    description = "Run TinyHelenTrainVec (~1M 파라미터, 벡터 백엔드)"
-    mainClass.set("train.experiments.TinyHelenTrainVecKt")
+tasks.register<JavaExec>("runTinyHelenTrainTextbookTurbo") {
+    description = "Run TinyHelenTrainTextbookTurbo (textbook-only, ~1M 파라미터)"
+    mainClass.set("train.experiments.TinyHelenTrainTextbookTurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx4g")
+    jvmArgs = listOf("-Xmx4g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runTinyHelenTrainTextbookVec") {
-    description = "Run TinyHelenTrainTextbookVec (textbook-only, ~1M 파라미터)"
-    mainClass.set("train.experiments.TinyHelenTrainTextbookVecKt")
+tasks.register<JavaExec>("runTinyHelenTrainConversationTurbo") {
+    description = "Run TinyHelenTrainConversationTurbo (100M conversation, ~1M 파라미터, 12k iter)"
+    mainClass.set("train.experiments.TinyHelenTrainConversationTurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx4g")
+    jvmArgs = listOf("-Xmx4g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runTinyHelenTrainConversationVec") {
-    description = "Run TinyHelenTrainConversationVec (100M conversation, ~1M 파라미터, 12k iter)"
-    mainClass.set("train.experiments.TinyHelenTrainConversationVecKt")
+tasks.register<JavaExec>("runConvMixTrainTurbo") {
+    description = "Run ConvMixTrainTurbo (TinyHelen conv + TinyDialogues age-5 stripped, ~1M 파라미터)"
+    mainClass.set("train.experiments.ConvMixTrainTurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx4g")
+    jvmArgs = listOf("-Xmx4g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runConvMixTrainVec") {
-    description = "Run ConvMixTrainVec (TinyHelen conv + TinyDialogues age-5 stripped, ~1M 파라미터)"
-    mainClass.set("train.experiments.ConvMixTrainVecKt")
+tasks.register<JavaExec>("runConvMixTurnTrainTurbo") {
+    description = "Run ConvMixTurnTrainTurbo (conv-mix + <|turn|> 토큰, 432k)"
+    mainClass.set("train.experiments.ConvMixTurnTrainTurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx4g")
+    jvmArgs = listOf("-Xmx4g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runConvMixTurnTrainVec") {
-    description = "Run ConvMixTurnTrainVec (conv-mix + <|turn|> 토큰, 432k)"
-    mainClass.set("train.experiments.ConvMixTurnTrainVecKt")
+tasks.register<JavaExec>("runConvMixTurnNoqTrainTurbo") {
+    description = "Run ConvMixTurnNoqTrainTurbo (conv-mix-turn 따옴표 제거, 432k)"
+    mainClass.set("train.experiments.ConvMixTurnNoqTrainTurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx4g")
+    jvmArgs = listOf("-Xmx4g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runConvMixTurnNoqTrainVec") {
-    description = "Run ConvMixTurnNoqTrainVec (conv-mix-turn 따옴표 제거, 432k)"
-    mainClass.set("train.experiments.ConvMixTurnNoqTrainVecKt")
+tasks.register<JavaExec>("runConvMixTurnNoqB128TrainTurbo") {
+    description = "Run ConvMixTurnNoqB128TrainTurbo (blockSize 128, 436k params)"
+    mainClass.set("train.experiments.ConvMixTurnNoqB128TrainTurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx4g")
+    jvmArgs = listOf("-Xmx4g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runConvMixTurnNoqB128TrainVec") {
-    description = "Run ConvMixTurnNoqB128TrainVec (blockSize 128, 436k params)"
-    mainClass.set("train.experiments.ConvMixTurnNoqB128TrainVecKt")
+tasks.register<JavaExec>("runConvMixA510TrainTurbo") {
+    description = "Run ConvMixA510TrainTurbo (TinyHelen + age-5 + age-10, ~18M tok, 432k)"
+    mainClass.set("train.experiments.ConvMixA510TrainTurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx4g")
+    jvmArgs = listOf("-Xmx6g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runConvMixA510TrainVec") {
-    description = "Run ConvMixA510TrainVec (TinyHelen + age-5 + age-10, ~18M tok, 432k)"
-    mainClass.set("train.experiments.ConvMixA510TrainVecKt")
+tasks.register<JavaExec>("runConvMixA510M773TrainTurbo") {
+    description = "Run ConvMixA510M773TrainTurbo (a510 데이터 + 773k tied 모델, 12k iter)"
+    mainClass.set("train.experiments.ConvMixA510M773TrainTurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx6g")
+    jvmArgs = listOf("-Xmx6g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runConvMixA510M773TrainVec") {
-    description = "Run ConvMixA510M773TrainVec (a510 데이터 + 773k tied 모델, 12k iter)"
-    mainClass.set("train.experiments.ConvMixA510M773TrainVecKt")
+tasks.register<JavaExec>("runConvMixA510M773B128TrainTurbo") {
+    description = "Run ConvMixA510M773B128TrainTurbo (773k tied + blockSize 128, 8k iter)"
+    mainClass.set("train.experiments.ConvMixA510M773B128TrainTurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx6g")
+    jvmArgs = listOf("-Xmx6g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runConvMixA510M773B128TrainVec") {
-    description = "Run ConvMixA510M773B128TrainVec (773k tied + blockSize 128, 8k iter)"
-    mainClass.set("train.experiments.ConvMixA510M773B128TrainVecKt")
+tasks.register<JavaExec>("runConvMixCleanA510M773TrainTurbo") {
+    description = "Run ConvMixCleanA510M773TrainTurbo (clean 데이터 + 773k tied 모델, 12k iter)"
+    mainClass.set("train.experiments.ConvMixCleanA510M773TrainTurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx6g")
+    jvmArgs = listOf("-Xmx6g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runConvMixCleanA510M773TrainVec") {
-    description = "Run ConvMixCleanA510M773TrainVec (clean 데이터 + 773k tied 모델, 12k iter)"
-    mainClass.set("train.experiments.ConvMixCleanA510M773TrainVecKt")
+tasks.register<JavaExec>("runConvMixCleanA510M773SwiGLUTrainTurbo") {
+    description = "Run ConvMixCleanA510M773SwiGLUTrainTurbo (clean + 773k tied + SwiGLU MLP)"
+    mainClass.set("train.experiments.ConvMixCleanA510M773SwiGLUTrainTurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx6g")
+    jvmArgs = listOf("-Xmx6g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runConvMixCleanA510M773SwiGLUTrainVec") {
-    description = "Run ConvMixCleanA510M773SwiGLUTrainVec (clean + 773k tied + SwiGLU MLP)"
-    mainClass.set("train.experiments.ConvMixCleanA510M773SwiGLUTrainVecKt")
+tasks.register<JavaExec>("runConvMixCleanA510M773SwiGLURoPETrainTurbo") {
+    description = "Run ConvMixCleanA510M773SwiGLURoPETrainTurbo (clean + tied + SwiGLU + RoPE)"
+    mainClass.set("train.experiments.ConvMixCleanA510M773SwiGLURoPETrainTurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx6g")
+    jvmArgs = listOf("-Xmx6g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runConvMixCleanA510M773SwiGLURoPETrainVec") {
-    description = "Run ConvMixCleanA510M773SwiGLURoPETrainVec (clean + tied + SwiGLU + RoPE)"
-    mainClass.set("train.experiments.ConvMixCleanA510M773SwiGLURoPETrainVecKt")
+tasks.register<JavaExec>("runDialoguesA510M773SwiGLURoPETrainTurbo") {
+    description = "Run DialoguesA510M773SwiGLURoPETrainTurbo (TinyDialogues age-5+10 only, tied + SwiGLU + RoPE)"
+    mainClass.set("train.experiments.DialoguesA510M773SwiGLURoPETrainTurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx6g")
+    jvmArgs = listOf("-Xmx6g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runDialoguesA510M773SwiGLURoPETrainVec") {
-    description = "Run DialoguesA510M773SwiGLURoPETrainVec (TinyDialogues age-5+10 only, tied + SwiGLU + RoPE)"
-    mainClass.set("train.experiments.DialoguesA510M773SwiGLURoPETrainVecKt")
+tasks.register<JavaExec>("runTwoStageBaseTrainTurbo") {
+    description = "Run TwoStageBaseTrainTurbo (TinyHelen wiki+textbook BASE pretrain — 사실 지식 주입)"
+    mainClass.set("train.experiments.TwoStageBaseTrainTurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx6g")
+    jvmArgs = listOf("-Xmx6g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runTwoStageBaseTrainVec") {
-    description = "Run TwoStageBaseTrainVec (TinyHelen wiki+textbook BASE pretrain — 사실 지식 주입)"
-    mainClass.set("train.experiments.TwoStageBaseTrainVecKt")
+tasks.register<JavaExec>("runTwoStageITTrainTurbo") {
+    description = "Run TwoStageITTrainTurbo (dialogues-a510 IT finetune + 20% BASE replay)"
+    mainClass.set("train.experiments.TwoStageITTrainTurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx6g")
+    jvmArgs = listOf("-Xmx6g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runTwoStageITTrainVec") {
-    description = "Run TwoStageITTrainVec (dialogues-a510 IT finetune + 20% BASE replay)"
-    mainClass.set("train.experiments.TwoStageITTrainVecKt")
+tasks.register<JavaExec>("runTwoStageBaseV2TrainTurbo") {
+    description = "Run TwoStageBaseV2TrainTurbo (TinyHelen wiki+textbook+web+book BASE pretrain, vocab 2000)"
+    mainClass.set("train.experiments.TwoStageBaseV2TrainTurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx6g")
+    jvmArgs = listOf("-Xmx6g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runTwoStageBaseV2TrainVec") {
-    description = "Run TwoStageBaseV2TrainVec (TinyHelen wiki+textbook+web+book BASE pretrain, vocab 2000)"
-    mainClass.set("train.experiments.TwoStageBaseV2TrainVecKt")
+tasks.register<JavaExec>("runTwoStageITV2TrainTurbo") {
+    description = "Run TwoStageITV2TrainTurbo (v2 IT finetune + 20% v2 BASE replay)"
+    mainClass.set("train.experiments.TwoStageITV2TrainTurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx6g")
+    jvmArgs = listOf("-Xmx6g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runTwoStageITV2TrainVec") {
-    description = "Run TwoStageITV2TrainVec (v2 IT finetune + 20% v2 BASE replay)"
-    mainClass.set("train.experiments.TwoStageITV2TrainVecKt")
+tasks.register<JavaExec>("runThreeStageDictTrainV4Turbo") {
+    description = "Run ThreeStageDictTrainV4Turbo (Stage 1: dict scratch pretrain, ~2.5k iter, 12 epoch)"
+    mainClass.set("train.experiments.ThreeStageDictTrainV4TurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx6g")
+    jvmArgs = listOf("-Xmx6g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runThreeStageDictTrainV4Vec") {
-    description = "Run ThreeStageDictTrainV4Vec (Stage 1: dict scratch pretrain, ~2.5k iter, 12 epoch)"
-    mainClass.set("train.experiments.ThreeStageDictTrainV4VecKt")
+tasks.register<JavaExec>("runThreeStageWikiTrainV4Turbo") {
+    description = "Run ThreeStageWikiTrainV4Turbo (Stage 2: wiki finetune from dict ckpt + 30% dict replay)"
+    mainClass.set("train.experiments.ThreeStageWikiTrainV4TurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx6g")
+    jvmArgs = listOf("-Xmx6g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runThreeStageWikiTrainV4Vec") {
-    description = "Run ThreeStageWikiTrainV4Vec (Stage 2: wiki finetune from dict ckpt + 30% dict replay)"
-    mainClass.set("train.experiments.ThreeStageWikiTrainV4VecKt")
+tasks.register<JavaExec>("runThreeStageConvTrainV4Turbo") {
+    description = "Run ThreeStageConvTrainV4Turbo (Stage 3: conv finetune from wiki ckpt + multi-replay 15% dict + 15% wiki)"
+    mainClass.set("train.experiments.ThreeStageConvTrainV4TurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx6g")
+    jvmArgs = listOf("-Xmx6g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runThreeStageConvTrainV4Vec") {
-    description = "Run ThreeStageConvTrainV4Vec (Stage 3: conv finetune from wiki ckpt + multi-replay 15% dict + 15% wiki)"
-    mainClass.set("train.experiments.ThreeStageConvTrainV4VecKt")
+tasks.register<JavaExec>("runThreeStageDictTrainV5Turbo") {
+    description = "Run ThreeStageDictTrainV5Turbo (Stage 1 v5: dict scratch, emb 144 / L9 / H6, ~2.5M params)"
+    mainClass.set("train.experiments.ThreeStageDictTrainV5TurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx6g")
+    jvmArgs = listOf("-Xmx8g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runThreeStageDictTrainV5Vec") {
-    description = "Run ThreeStageDictTrainV5Vec (Stage 1 v5: dict scratch, emb 144 / L9 / H6, ~2.5M params)"
-    mainClass.set("train.experiments.ThreeStageDictTrainV5VecKt")
+tasks.register<JavaExec>("runThreeStageWikiTrainV5Turbo") {
+    description = "Run ThreeStageWikiTrainV5Turbo (Stage 2 v5: wiki finetune from dict ckpt, 30% dict replay)"
+    mainClass.set("train.experiments.ThreeStageWikiTrainV5TurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx8g")
+    jvmArgs = listOf("-Xmx8g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runThreeStageWikiTrainV5Vec") {
-    description = "Run ThreeStageWikiTrainV5Vec (Stage 2 v5: wiki finetune from dict ckpt, 30% dict replay)"
-    mainClass.set("train.experiments.ThreeStageWikiTrainV5VecKt")
+tasks.register<JavaExec>("runThreeStageConvTrainV5Turbo") {
+    description = "Run ThreeStageConvTrainV5Turbo (Stage 3 v5: conv finetune from wiki ckpt, 15%+15% multi-replay)"
+    mainClass.set("train.experiments.ThreeStageConvTrainV5TurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx8g")
+    jvmArgs = listOf("-Xmx8g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runThreeStageConvTrainV5Vec") {
-    description = "Run ThreeStageConvTrainV5Vec (Stage 3 v5: conv finetune from wiki ckpt, 15%+15% multi-replay)"
-    mainClass.set("train.experiments.ThreeStageConvTrainV5VecKt")
+tasks.register<JavaExec>("runCcmcV2ProStage1TrainTurbo") {
+    description = "Run CcmcV2ProStage1TrainTurbo (CCMC v2-pro Stage 1: binding scratch, 8L×96D×3H SwiGLU+RoPE, vocab 2000)"
+    mainClass.set("train.experiments.CcmcV2ProStage1TrainTurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx8g")
-}
-
-tasks.register<JavaExec>("runCcmcV2ProStage1TrainVec") {
-    description = "Run CcmcV2ProStage1TrainVec (CCMC v2-pro Stage 1: binding scratch, 8L×96D×3H SwiGLU+RoPE, vocab 2000)"
-    mainClass.set("train.experiments.CcmcV2ProStage1TrainVecKt")
-    classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx6g")
-}
-
-tasks.register<JavaExec>("runCcmcV2ProStage2TrainVec") {
-    description = "Run CcmcV2ProStage2TrainVec (CCMC v2-pro Stage 2: instruction finetune from stage1 ckpt + 25% stage1 replay)"
-    mainClass.set("train.experiments.CcmcV2ProStage2TrainVecKt")
-    classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx6g")
+    jvmArgs = listOf("-Xmx6g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
 tasks.register<JavaExec>("runEncodeWithExistingMeta") {
     description = "Run EncodeWithExistingMeta (공유 meta.json으로 다른 디렉터리 인코딩)"
     mainClass.set("data.EncodeWithExistingMetaKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx12g")
+    jvmArgs = listOf("-Xmx12g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
 tasks.register<JavaExec>("runSplitByTokenRatio") {
     description = "Run SplitByTokenRatio (record-per-line 입력을 토큰 수 기준으로 train/val 분할)"
     mainClass.set("data.SplitByTokenRatioKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx4g")
+    jvmArgs = listOf("-Xmx4g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
 tasks.register<JavaExec>("runSampler") {
     description = "Run SamplerMain (샘플링)"
     mainClass.set("sample.SamplerMainKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx2g")
+    jvmArgs = listOf("-Xmx2g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
 tasks.register<JavaExec>("runTinyHelenSample") {
     description = "Run TinyHelenSample (model/ 최신 스칼라 체크포인트 자동 샘플링)"
     mainClass.set("sample.TinyHelenSampleKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx2g")
-}
-
-tasks.register<JavaExec>("runTinyHelenSampleVec") {
-    description = "Run TinyHelenSampleVec (model/vec/ 최신 벡터 체크포인트 자동 샘플링)"
-    mainClass.set("sample.TinyHelenSampleVecKt")
-    classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx2g")
+    jvmArgs = listOf("-Xmx2g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
 // turbo 백엔드 — Phase 0~5 진행 중. JDK 21 + Java Vector API 활용.
@@ -354,13 +333,6 @@ tasks.register<JavaExec>("runCcmcV2ProStage2TrainTurbo") {
     jvmArgs = listOf("-Xmx6g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runBench10MVec") {
-    description = "Run Bench10MVec — 10M params 250 iter (vec)"
-    mainClass.set("train.experiments.Bench10MVecKt")
-    classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx8g")
-}
-
 tasks.register<JavaExec>("runBench10MTurbo") {
     description = "Run Bench10MTurbo — 10M params 250 iter (turbo)"
     mainClass.set("train.experiments.Bench10MTurboKt")
@@ -372,49 +344,42 @@ tasks.register<JavaExec>("runCcmcV4TinyStoriesPrep") {
     description = "Run CcmcV4TinyStoriesPrep (cefr-kb의 raw.jsonl → data/ccmc-v4-tinystories/{train,val}.bin)"
     mainClass.set("data.CcmcV4TinyStoriesPrepKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx4g")
+    jvmArgs = listOf("-Xmx4g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
 tasks.register<JavaExec>("runCcmcV4MergedPrep") {
     description = "v2-pro + v4 9 epochs 통합 prep → data/ccmc-v4-merged/{train,val}.bin"
     mainClass.set("data.CcmcV4MergedPrepKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx6g")
+    jvmArgs = listOf("-Xmx6g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
 tasks.register<JavaExec>("runCcmcV4MergedSpaceSepPrep") {
     description = "v4-merged 같은 코퍼스에 splitSpaceAsToken=true 새 BPE 학습 → data/ccmc-v4-merged-spacesep/"
     mainClass.set("data.CcmcV4MergedSpaceSepPrepKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx8g")
+    jvmArgs = listOf("-Xmx8g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runCcmcV4MergedSpaceSepQuickTrainVec") {
+tasks.register<JavaExec>("runCcmcV4MergedSpaceSepQuickTrainTurbo") {
     description = "v4-merged-spacesep 1M 모델 2000 iter 빠른 sanity 학습"
-    mainClass.set("train.experiments.CcmcV4MergedSpaceSepQuickTrainVecKt")
+    mainClass.set("train.experiments.CcmcV4MergedSpaceSepQuickTrainTurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx8g")
+    jvmArgs = listOf("-Xmx8g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runCcmcV4MergedSpaceSep3MTrainVec") {
+tasks.register<JavaExec>("runCcmcV4MergedSpaceSep3MTrainTurbo") {
     description = "v4-merged-spacesep ~3M 모델 (dim 160 · layers 8 · heads 5) 3000 iter 학습"
-    mainClass.set("train.experiments.CcmcV4MergedSpaceSep3MTrainVecKt")
+    mainClass.set("train.experiments.CcmcV4MergedSpaceSep3MTrainTurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx8g")
+    jvmArgs = listOf("-Xmx8g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
 tasks.register<JavaExec>("runSampleV4MergedSpaceSep3M") {
     description = "v0022 best ckpt 재샘플링 (T=0.8, topK=40, topP=0.9, repPenalty=1.15)"
     mainClass.set("sample.SampleV4MergedSpaceSep3MKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx4g")
-}
-
-tasks.register<JavaExec>("runBench5MVec") {
-    description = "Run Bench5MVec — 5M params 500 iter (vec 백엔드 시간 측정)"
-    mainClass.set("train.experiments.Bench5MVecKt")
-    classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx6g")
+    jvmArgs = listOf("-Xmx4g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
 tasks.register<JavaExec>("runBench5MTurbo") {
@@ -428,14 +393,14 @@ tasks.register<JavaExec>("runSamplePromptsFromFile") {
     description = "Run SamplePromptsFromFile (ckpt + 프롬프트 파일로 커스텀 샘플링)"
     mainClass.set("sample.SamplePromptsFromFileKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx2g")
+    jvmArgs = listOf("-Xmx2g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
-tasks.register<JavaExec>("runChatVec") {
-    description = "Run ChatVec (인터랙티브 대화 REPL — ckpt 인자 필요)"
-    mainClass.set("sample.ChatVecKt")
+tasks.register<JavaExec>("runChatTurbo") {
+    description = "Run ChatTurbo (인터랙티브 대화 REPL — ckpt 인자 필요)"
+    mainClass.set("sample.ChatTurboKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx2g")
+    jvmArgs = listOf("-Xmx2g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
     standardInput = System.`in`
 }
 
@@ -450,12 +415,12 @@ tasks.register<JavaExec>("runAnalyzeTokens") {
     description = "Run AnalyzeTokensMain (토큰 분포 분석)"
     mainClass.set("data.AnalyzeTokensMainKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx2g")
+    jvmArgs = listOf("-Xmx2g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
 
 tasks.register<JavaExec>("runDebugBPE") {
     description = "Run DebugBPEMain (BPE 디버깅)"
     mainClass.set("data.DebugBPEMainKt")
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs = listOf("-Xmx2g")
+    jvmArgs = listOf("-Xmx2g", "--add-modules=jdk.incubator.vector", "-XX:+AlwaysPreTouch")
 }
